<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fr.dtrx.librairie.activities.BookCreationActivity">

    <ImageView android:id="@+id/image_view_book_image"
        android:layout_width="75sp"
        android:layout_height="100sp" />

    <Button android:id="@+id/button_take_picture"
        android:hint="@string/hint_take_picture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/image_view_book_image"
        android:onClick="takePicture" />

    <Button android:id="@+id/button_galery"
        android:hint="@string/hint_galery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/image_view_book_image"
        android:layout_below="@+id/button_take_picture"
        android:onClick="openGallery" />

    <EditText android:id="@+id/edit_text_book_title"
        android:hint="@string/hint_book_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_galery" />

    <EditText android:id="@+id/edit_text_book_author"
        android:hint="@string/hint_book_author"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_book_title" />

    <EditText android:id="@+id/edit_text_book_year"
        android:hint="@string/hint_book_year"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_book_author" />

    <EditText android:id="@+id/edit_text_book_edition"
        android:hint="@string/hint_book_edition"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_book_year" />

    <EditText android:id="@+id/edit_text_book_description"
        android:hint="@string/hint_book_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_book_edition"
        android:height="100dp"/>
    
    <Button
        android:text="@string/button_book_creation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/edit_text_book_description"
        android:layout_centerHorizontal="true"
        android:onClick="btnCreateBook"/>

</RelativeLayout>
