<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

        <ImageView
            android:id="@+id/android_picture"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="41dp" />


        <Button android:id="@+id/button_book_creation"
            android:text="@string/button_book_ajout_livre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="btnCreateBook"
            android:layout_below="@+id/android_picture"
            android:layout_marginTop="50sp" />

        <Button android:id="@+id/button_book_filter_creation"
            android:layout_below="@id/button_book_creation"
            android:text="@string/button_book_filter_creation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/small_padding"
            android:onClick="btnCreateBookFilter"/>

        <Button android:id="@+id/show_collection"
            android:layout_below="@id/button_book_filter_creation"
            android:text="@string/button_collection_book"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_centerHorizontal="true"
            android:onClick="btnShowCollection" />

        <Button
            android:layout_below="@id/show_collection"
            android:text="@string/button_collection_book_filter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_centerHorizontal="true"
            android:onClick="btnShowCollectionFilter" />

    </RelativeLayout>
</ScrollView>